# medbilldozer

./: .bandit  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pytest-usage.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  API_QUICKREF.md  ARCHITECTURE.md  BENCHMARK_DASHBOARD_QUICKSTART.md  BENCHMARK_ENHANCEMENTS_SUMMARY.md  BENCHMARK_MONITORING_DELIVERABLES.md  BETA_MODE_GUIDE.md  BETA_MODE_QUICKSTART.md  BETA_TO_PROD_MIGRATION.md  CHANGELOG_TRANSCRIPT_WIDGET.md  CHANGELOG_UI_IMPROVEMENTS.md  CI_WORKFLOW_FIX.md  CLEANUP_PLAN.md  CLINICAL_IMAGES_COMMIT_SUMMARY.md  CLINICAL_VALIDATION_COMPLETE.md  CLINICAL_VALIDATION_HEATMAPS.md  CLINICAL_VALIDATION_QUICKSTART.md  COMPLETION_CERTIFICATE.md  CONFIG_README.md  CORS_FIX_COMPLETE.md  CORS_VERIFICATION.md  COST_SAVINGS_SETUP.md  CROSS_DOCUMENT_ANALYSIS_COMPLETE.md  CROSS_DOCUMENT_BENCHMARKS_COMPLETE.md  CROSS_DOCUMENT_BENCHMARK_QUICKSTART.md  DEPLOYMENT_CHECKLIST.md  DETAILED_PROVIDER_COMPARISON.md  DOCUMENTATION.md  FINAL-FIX-SUMMARY.md  FINAL_STATUS_REPORT.md  FIREBASE_SETUP.md  GITHUB_ACTIONS_COMPLETE.md  GITHUB_ACTIONS_FIX.md  (+63 more)
.artifacts/: COMMIT_MESSAGE.txt  bandit-report.json
.devcontainer/: devcontainer.json
.github/: README.md  dependabot.yml
_modules/: __init__.py  cookies_ui.py  coverage_matrix.py  dental_line_item_prompt.py  document_classifier.py  document_fingerprint.py  document_identity.py  document_ui.py  extraction_prompt.py  extraction_providers.py  fact_extractor.py  fsa_claim_item_prompt.py  gemini_analysis_provider.py  gemini_langextractor.py  insurance_claim_item_prompt.py  llm_interface.py  local_heuristic_extractor.py  medgemma_hosted_provider.py  medical_line_item_prompt.py  openai_analysis_provider.py  openai_langextractor.py  orchestrator_agent.py  privacy_ui.py  receipt_line_item_prompt.py  savings_aggregator.py  serialization.py  ui.py  ui_coverage_matrix.py  ui_documents.py  workflow_store.py
audio/: .gitkeep  README.md
backend/: .dockerignore  .env.cloudrun  .env.example  .gcloudignore  Dockerfile  README.md  cloudrun-env.yaml  env-vars.yaml  requirements.txt  test_supabase_connection.py
benchmarks/: .gitignore  ANNOTATION_GUIDE.md  COMPLETE_SUMMARY.md  (+13 more)
(+836 files in other folders)
